--- a/Demo2/1_code/Chatroom/index.html
+++ b/Demo2/1_code/Chatroom/index.html
@@ -1,5 +1,11 @@
 <!doctype html>
 <!--
+// written by: Yaocheng Tong
+// tested by:  Yaocheng Tong
+// debugged by: Yaocheng Tong
+// Presentationed by: Yaocheng Tong
+-->
+<!--
   Copyright 2015 Google Inc. All rights reserved.
   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
